fixed overlay, overflow hidden, svg-menu

--- a/src/sass/layout/_page-header.scss
+++ b/src/sass/layout/_page-header.scss
@@ -101,13 +101,13 @@
 }
 .header__menu-svg {
   fill: $main-accent-color;
-  height: 20px;
-  width: 12px;
+  height: 100%;
+  width: 100%;
 }
 
 .header__menu-btn {
-  width: 12px;
-  height: 20px;
+  width: 20px;
+  height: 12px;
   background-color: transparent;
 
   @media screen and (min-width: $medium) {
@@ -169,11 +169,13 @@
   }
 }
 .over {
-  position: absolute;
+  position: fixed;
   top: 0;
   right: 0;
   width: 100vw;
   height: 100vh;
+  overflow: hidden;
+
   background-color: rgba($color: #000000, $alpha: 0.2);
   opacity: 1;
   transition: opacity 250ms $cubic, visibility 250ms $cubic;
