--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -491,13 +491,13 @@ a {
 
 .header__menu-svg {
   fill: #d41443;
-  height: 20px;
-  width: 12px;
+  height: 100%;
+  width: 100%;
 }
 
 .header__menu-btn {
-  width: 12px;
-  height: 20px;
+  width: 20px;
+  height: 12px;
   background-color: transparent;
 }
 
@@ -585,11 +585,12 @@ a {
 }
 
 .over {
-  position: absolute;
+  position: fixed;
   top: 0;
   right: 0;
   width: 100vw;
   height: 100vh;
+  overflow: hidden;
   background-color: rgba(0, 0, 0, 0.2);
   opacity: 1;
   -webkit-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
